--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "author": "huangqiao",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --exec babel-node",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "nuxt start --exec babel-node",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "element-ui": "^2.4.11"
+    "babel-polyfill": "^6.26.0",
+    "element-ui": "^2.4.11",
+    "nuxt": "^2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0"
+  }
 }
