--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.11",
     "nuxt": "^2.0.0"
