--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxtjs/axios": "^5.3.6",
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.11",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "videojs-contrib-hls": "^5.15.0",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "less": "^3.10.3",
